fix codesmells 3