@@ -11,6 +11,7 @@ public class AlarmCustomView extends DefaultLayout {
     final static String INTERVAL_IMG_NAME = "intervalimage.jpg";
     final static int DISPLAY_AMT = 3;
     final String NONE = "  NONE";
+    final String BLANK = "      ";
 
     ImageIcon volumeImage;
     ImageIcon intervalImage;
@@ -83,12 +84,12 @@ public class AlarmCustomView extends DefaultLayout {
         borderPanel.setBounds(350 - 5, 240 - 5,
                 ALARM_LIST_WIDTH + 10, ALARM_LIST_HEIGHT + 10);
 
-        add(intervalControlPanel, new Integer(1));
-        add(intervalImgPanel, new Integer(1));
-        add(volumeControlPanel, new Integer(1));
-        add(alarmListPanel, new Integer(1));
-        add(volumeImgPanel, new Integer(1));
-        add(borderPanel, new Integer(2));
+        add(intervalControlPanel, Integer.valueOf(1));
+        add(intervalImgPanel, Integer.valueOf(1));
+        add(volumeControlPanel, Integer.valueOf(1));
+        add(alarmListPanel, Integer.valueOf(1));
+        add(volumeImgPanel, Integer.valueOf(1));
+        add(borderPanel, Integer.valueOf(1));
     }
     public void setAlarmInterval(String str) {
         displaySegment(550, 165, ALARM_WIDTH, ALARM_HEIGHT, str, layer++);
@@ -108,19 +109,19 @@ public class AlarmCustomView extends DefaultLayout {
     }
 
     public void setAlarmList(String str) {
-        if (str.substring(0, 6).equals("      "))
+        if (str.substring(0, 6).equals(BLANK))
             displaySegment(350, 240, ALARM_LIST_WIDTH, ALARM_LIST_HEIGHT / 3, NONE, layer++);
         else
             displaySegment(350, 240, ALARM_LIST_WIDTH, ALARM_LIST_HEIGHT / 3,
                     str.substring(0, 6), layer++);
 
-        if (str.substring(6, 12).equals("      "))
+        if (str.substring(6, 12).equals(BLANK))
             displaySegment(350, 240 + ALARM_LIST_HEIGHT / 3, ALARM_LIST_WIDTH, ALARM_LIST_HEIGHT / 3, NONE, layer++);
         else
             displaySegment(350, 240 + ALARM_LIST_HEIGHT / 3, ALARM_LIST_WIDTH, ALARM_LIST_HEIGHT / 3,
                     str.substring(6, 12), layer++);
 
-        if (str.substring(12, 18).equals("      "))
+        if (str.substring(12, 18).equals(BLANK))
             displaySegment(350, 240 + ALARM_LIST_HEIGHT / 3 * 2, ALARM_LIST_WIDTH, ALARM_LIST_HEIGHT / 3, NONE, layer++);
         else
             displaySegment(350, 240 + ALARM_LIST_HEIGHT / 3 * 2, ALARM_LIST_WIDTH, ALARM_LIST_HEIGHT / 3,
